# cad

./: .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .ycm_extra_conf.py  AUTHORS.txt  CMakeLists.txt  CONTRIBUTING.md  INSTALL.txt  README.md  code-of-conduct.md  copyright.h  kicad_build_version.h  vcpkg-configuration.json  vcpkg.json
.gitlab/: Fedora-Linux-CI.yml  Ubuntu-20.04-CI.yml  templates.yml
3d-viewer/: 3d_enums.h  CMakeLists.txt
CMakeModules/: FindCairo.cmake  FindHarfBuzz.cmake  FindwxWidgets.cmake  Functions.cmake  KiCadFullVersion.cmake  Warnings.cmake  WritePlatformMetadata_macos.cmake  WriteVersionHeader.cmake
Dockerfiles/: Dockerfile_ubuntu_18.04
bitmap2component/: CMakeLists.txt  bitmap2cmp_gui.cpp  bitmap2cmp_gui.h  bitmap2cmp_gui_base.cpp  bitmap2cmp_gui_base.h  bitmap2cmp_settings.cpp
bitmaps_png/: CMakeLists.txt
cmake/: FindGmsh.cmake  FindPixman.cmake  FindSparselizard.cmake  FindwxPython.cmake
common/: CMakeLists.txt  advanced_config.cpp  base_screen.cpp  base_struct.cpp  base_units.cpp  basic_gal.cpp  buffers_debug.cpp  build_version.cpp  cimage.cpp  commit.cpp  common.cpp  config_params.cpp  cursors.cpp  design_block.h  design_block_info.cpp  design_block_info.h  design_block_info_impl.cpp  design_block_io.cpp  design_block_io.h  design_block_lib_table.cpp  dialog_shim.cpp  draw_panel_gal.cpp  eda_angle.cpp  eda_base_frame.cpp  eda_draw_frame.cpp  eda_rect.cpp  eda_text.cpp  filename_resolver.cpp  fp_lib_table.cpp  gestfich.cpp  gr_text.cpp  hash_eda.cpp  hotkeys_basic.cpp  kiid.cpp  kiway.cpp  launch_ext.cpp  layer_id.cpp  lib_tree_model.cpp  lib_tree_model_adapter.cpp  lset.cpp  (+14 more)
cvpcb/: cvpcb_mainframe.cpp  cvpcb_settings.cpp  display_footprints_frame.cpp  display_footprints_frame.h
eeschema/: CMakeLists.txt  annotate.cpp  autoplace_fields.cpp  bom_plugins.cpp  bus-wire-junction.cpp  class_libentry.cpp  class_libentry.h  component_references_lister.cpp  connection_graph.cpp  connection_graph.h  cross-probing.cpp  design_block_tree_model_adapter.cpp  design_block_tree_model_adapter.h  design_block_utils.cpp  ee_collectors.cpp  ee_collectors.h  eeschema_config.cpp  eeschema_helpers.cpp  eeschema_helpers.h  eeschema_id.h  eeschema_jobs_handler.cpp  eeschema_jobs_handler.h  eeschema_settings.cpp  eeschema_settings.h  erc.cpp  erc_item.cpp  erc_item.h  erc_settings.cpp  erc_settings.h  fields_grid_table.cpp  files-io.cpp  generate_alias_info.cpp  getpart.cpp  hierarch.cpp  invoke_sch_dialog.h  lib_arc.cpp  lib_arc.h  lib_bezier.cpp  lib_bezier.h  lib_circle.cpp  (+86 more)
fem/: CMakeLists.txt  fem_app_main.cpp  fem_test.cpp
gerbview/: CMakeLists.txt  am_primitive.cpp  events_called_functions.cpp  excellon_defaults.h  excellon_read_drill_file.cpp  export_to_pcbnew.cpp  export_to_pcbnew.h  files.cpp  gbr_layout.h  gerber_draw_item.h  gerber_file_image.h  gerber_file_image_list.cpp  gerbview_draw_panel_gal.cpp  gerbview_draw_panel_gal.h  gerbview_frame.cpp  gerbview_frame.h  gerbview_painter.cpp  gerbview_settings.cpp  rs274d.cpp  select_layers_to_pcb.cpp  select_layers_to_pcb.h
helpers/: Termin.ics
include/: advanced_config.h  base_screen.h  base_set.h  base_struct.h  basic_gal.h  board_design_settings.h  board_item.h  build_version.h  class_board_item.h  class_draw_panel_gal.h  class_pcb_group.h  commit.h  common.h  confirm.h  design_block_lib_table.h  eda_angle.h  eda_base_frame.h  eda_draw_frame.h  eda_item.h  eda_pattern_match.h  eda_rect.h  eda_shape.h  eda_text.h  filename_resolver.h  fill_type.h  frame_type.h  gl_utils.h  gr_text.h  hash_eda.h  hotkeys_basic.h  id.h  kicad_string.h  kiway_player.h  layer_ids.h  layers_id_colors_and_visibility.h  lib_tree_item.h  lib_tree_model.h  lib_tree_model_adapter.h  lset.h  markup_parser.h  (+23 more)
kicad/: CMakeLists.txt  kicad.cpp  kicad_cli.cpp  kicad_id.h  kicad_manager_frame.cpp  kicad_manager_frame.h  kicad_settings.cpp  kicad_settings.h  menubar.cpp  pgm_kicad.h  project_tree.cpp  project_tree_item.cpp  project_tree_pane.cpp  tree_file_type.h  tree_project_frame.cpp  treeproject_item.cpp  treeprojectfiles.cpp
kicad/cli/: command_fp_upgrade.cpp  command_pcb_convert.cpp  command_pcb_convert.h  command_pcb_resave.cpp  command_pcb_resave.h  command_pcb_upgrade.cpp  command_pcb_upgrade.h  command_sch_convert.cpp  command_sch_convert.h  command_sch_resave.cpp  command_sch_resave.h  command_sch_upgrade.cpp  command_sch_upgrade.h  command_utils.h
kicad/dialogs/: dialog_template_selector_base.h  dialog_update_check_prompt.cpp  dialog_update_check_prompt.h  dialog_update_check_prompt_base.cpp  dialog_update_check_prompt_base.fbp  dialog_update_check_prompt_base.h  panel_design_block_lib_table.cpp  panel_design_block_lib_table.h  panel_kicad_launcher.cpp  panel_kicad_launcher.h
kicad/pcm/: pcm.cpp  pcm_task_manager.h
kicad/pcm/dialogs/: dialog_manage_repositories.cpp  dialog_manage_repositories.h  dialog_manage_repositories_base.cpp  dialog_manage_repositories_base.fbp  dialog_manage_repositories_base.h  dialog_pcm.cpp  dialog_pcm_progress.cpp  dialog_pcm_progress.h  dialog_pcm_progress_base.h  panel_packages_view.cpp
kicad/tools/: kicad_manager_actions.cpp  kicad_manager_actions.h  kicad_manager_control.cpp  kicad_manager_control.h
pagelayout_editor/: CMakeLists.txt  files.cpp  pl_draw_panel_gal.cpp  pl_editor_frame.cpp  pl_editor_frame.h  pl_editor_layout.h  pl_editor_settings.cpp  (+1 more)
pcbnew/fem/: CMakeLists.txt  gmsh_mesher.cpp  gmsh_mesher.h  gmsh_viewer.cpp  gmsh_viewer.h
pcbnew/fem/common/: fem_constants.cpp  fem_constants.h  fem_descriptor.cpp  fem_descriptor.h  fem_port.cpp  fem_port.h  fem_result.cpp  fem_result.h
pcbnew/fem/sparselizard/: sparselizard_DC_CurrentDensity.cpp  sparselizard_equations.tex  sparselizard_mesher.cpp  sparselizard_mesher.h  sparselizard_solver.cpp  sparselizard_solver.h
pcbnew/python/: CMakeLists.txt
pcbnew/python/plugins/: PadArray.py
pcbnew/python/scripting/: pcbnew_action_plugins.cpp
qa/fem_proto/: CMakeLists.txt  fem_currentDensity.cpp  fem_proto_test.cpp  sparselizard_DC.cpp  test_module.cpp  tmp.kicad_pcb  tmp.kicad_pro
(+1288 files in other folders)
